WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195468
Have the UIProcess take the UnboundedNetworking assertion when downloads are in progress
https://bugs.webkit.org/show_bug.cgi?id=195468
Summary
Have the UIProcess take the UnboundedNetworking assertion when downloads are ...
Brady Eidson
Reported
2019-03-08 10:32:12 PST
Have the UIProcess take the UnboundedNetworking assertion when downloads are in progress
Attachments
Patch
(3.66 KB, patch)
2019-03-08 10:35 PST
,
Brady Eidson
aestes
: review+
Details
Formatted Diff
Diff
Patch
(3.66 KB, patch)
2019-03-08 11:07 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(3.67 KB, patch)
2019-03-08 11:57 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(3.70 KB, patch)
2019-03-08 12:07 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(3.73 KB, patch)
2019-03-08 13:01 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(3.74 KB, patch)
2019-03-08 14:02 PST
,
Brady Eidson
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
PFL
(3.74 KB, patch)
2019-03-08 15:14 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2019-03-08 10:35:48 PST
Created
attachment 364031
[details]
Patch This patch relies on the still-unlanded patch in 195465 to land, so it won't apply on EWS... but it's small and reviewable nonetheless
Brady Eidson
Comment 2
2019-03-08 11:07:05 PST
Created
attachment 364040
[details]
Patch
Brady Eidson
Comment 3
2019-03-08 11:57:51 PST
Created
attachment 364045
[details]
Patch
EWS Watchlist
Comment 4
2019-03-08 11:59:20 PST
Attachment 364045
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/Downloads/DownloadProxyMap.cpp:34: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 5
2019-03-08 12:07:17 PST
Created
attachment 364046
[details]
Patch
Brady Eidson
Comment 6
2019-03-08 13:01:32 PST
Created
attachment 364053
[details]
Patch
Brady Eidson
Comment 7
2019-03-08 14:02:13 PST
Created
attachment 364061
[details]
Patch Dammit Windows...
WebKit Commit Bot
Comment 8
2019-03-08 14:32:59 PST
Comment on
attachment 364061
[details]
Patch Rejecting
attachment 364061
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 364061, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!. Full output:
https://webkit-queues.webkit.org/results/11431460
Brady Eidson
Comment 9
2019-03-08 15:14:44 PST
Created
attachment 364078
[details]
PFL
WebKit Commit Bot
Comment 10
2019-03-08 15:58:58 PST
Comment on
attachment 364078
[details]
PFL Clearing flags on attachment: 364078 Committed
r242662
: <
https://trac.webkit.org/changeset/242662
>
WebKit Commit Bot
Comment 11
2019-03-08 15:59:00 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12
2019-03-08 15:59:21 PST
<
rdar://problem/48729463
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug