Have the UIProcess take the UnboundedNetworking assertion when downloads are in progress. https://bugs.webkit.org/show_bug.cgi?id=195468

Reviewed by Andy Estes.

* UIProcess/Downloads/DownloadProxyMap.cpp:
(WebKit::DownloadProxyMap::DownloadProxyMap):
(WebKit::DownloadProxyMap::createDownloadProxy): If this is the first download, and the process has the entitlement,
  take the assertion.
(WebKit::DownloadProxyMap::downloadFinished):
(WebKit::DownloadProxyMap::processDidClose):
* UIProcess/Downloads/DownloadProxyMap.h:


Canonical link: https://commits.webkit.org/209798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242662 268f45cc-cd09-0410-ab3c-d52691b4dbfc